tkinter_PYTHON = elmsim_tk.py\
                engineTab.py\
                testTab1.py\
                testTab2.py\ 
                __init__.py

tkinterdir = $(ELMSIMDIR)/tkinter

CLEANFILES = elmsim_tk.pyc\
             engineTab.pyc\
             testTab1.pyc\
             testTab2.pyc\
             __init__.pyc

DISTCLEANFILES = Makefile Makefile.in
